# Ink-Player

./: .bailing_key  README.md  nginx-firmware.conf  requirements.txt  墨水屏桌面助手_设计方案.md
.codegraph/: daemon.pid
certs/: ca.crt  ca.key  server.crt  server.csr  server.key
docs/: 功耗策略.md  墨水屏桌面助手_产品方案书.md  墨水屏桌面助手_设计方案.md
docs/plans/: 2026-06-02-墨水屏桌面助手-实现计划.md
enclosure/: ink-player-case.scad
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  audio.c  audio.h  display.c  display.h  doubao_ws.c  encoder.c  encoder.h  fonts.c  fonts.h  main.c  menu.c  menu.h  pin_config.h  ui_render.c  ui_render.h  wifi_app.c  wifi_app.h
infra/: mosquitto-desk.conf
infra/mosquitto-certs/: ca.crt  ca.key  ca.srl  san.cnf  server-chain.crt  server.crt  server.csr  server.key
services/: hermes_intents.py  tts_service.py  voice_text_server.py  weather_service.py
static/: ink-dither.html  voice_monitor.html
tests/: test_hermes_intents.py  test_tts_service.py  test_weather_service.py
